*** 20000206_1 by lusky
fixed spaces in src/Makefile.in (db)


*** 20000201_1 by lusky
fixed UMR in poll code (th)
revved patchlevel to b121


*** 20000131_2 by lusky
revved patchlevel to b120
dropped TS_MAX_DELTA default to 300 seconds
various compile warning fixes
turn off GLINES by default


*** 20000131_1 by lusky
reverted to -5 nick collide code (db)
fixes to make debugmode compile (db)


*** 20000103_1 by lusky
revved patchlevel to b119


*** 20000102_1 by lusky
The "hack" ops message is just plain wrong. Its not needed anyway. (db).
userhost formatting problem (ce)
malformed U line caused strange cores on /rehash (db)


*** 19991228_1 by lusky
split m_list.c away from channel.c its getting too silly  ALL paced
  commands should give RPL_LOAD2HI if its a local client request.
  Its not going to flood off the user... Hence, I have added RPL_LOAD2HI
  to m_list.c splitting it from channel.c (db)
optimized the patch I did for USE_IP_I_LINE first.. not thoroughly tested. (db)
resync_channels was just a waste of time. If the clock goes that far off,
 restart the puppy. (db)


*** 19991227_1 by lusky
update the oper help file, which was getting out of sync (db)
fixed a redundant if in channel.c (db)
core dumps, hangs if USE_IP_I_LINE_FIRST was defined (db)


*** 19991223_1 by lusky
backed out previous change to config.h
upped MAXSENDQLENGTH slightly
redid dbuf handling to dynamically allocate more dbufs (db)
numeric 480 is unnecessary 479 does the same job on ircu ircnet (db)


*** 19991222_1 by lusky
changed BUFFERPOOL definition to try to fix mass disconnects during netsplits
  on larger (over 8k local clients) servers
revved patchlevel to b118


*** 19991220_1 by lusky
patch for core if there were no klines at all (db)
revved patchlevel to b117


*** 19991213_1 by lusky
another fix for dline bug (db)
"E lines" weren't being honoured on connect for glines (db)


*** 19991210_1 by lusky
revved patchlevel to b116
fix for quote dline's being treated as /8's (db)

